# CliView

./: index.md  popup.html
.github/: dependabot.yml  rust_ci.yml
.github/workflows/: desktop_ci.yml  main.yml  rust_cd.yml  rust_ci.yml
Browser Extension/: README.md  popup.css  popup.html
Cliview Extension updated/: README.md  style.css
api/: .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  dummy_api.py  install.sh
api/src/command/: main.rs
api/src/lib/: config.rs  cors.rs  db.rs  lib.rs  macros.rs  player.rs  types.rs  video_processing.rs
api/src/proxy/: main.rs
api/src/queue/: main.rs
api/src/streamer/: main.rs
browser_extension/: README.md  manifest.json  popup.css  popup.html  popup.js
desktop_client/: .gitignore  README.md  progress_report.txt
desktop_client/desktop/: desktop.sln
desktop_client/desktop/desktop/: constants.py  desktop.py  desktop.pyproj  functionality.py  gui.py  main.py  settings.json
desktop_client/desktop/desktop/Installation/: environment.yaml
desktop_client/desktop/desktop/tests/: constants.py  functionality.py  settings.json  test.py
mobile_app/: App.js  app.json  db.json  package-lock.json  package.json
mobile_app/__tests__/: API-test.js  HomeScreen-test.js
mobile_app/api/: jsonServer.js
mobile_app/components/: postReq.js
mobile_app/components/player/: backward.js
mobile_app/screens/: HomeScreen.js
mobile_app/src/__tests__/__snapshots__/: HomeScreen-test.js.snap
mobile_app/src/api/: jsonServer.js
mobile_app/src/components/: player.js  searchBar.js  volumeSlide.js
mobile_app/src/components/player/: backward.js  bigBackword.js  bigForward.js  forward.js  play_pause.js
mobile_app/src/screens/: HomeScreen.js
