[package]
name = "api"
version = "0.1.0"
authors = ["Bálint Gyarmathy <bulint1@gmail.com>"]
edition = "2018"

[features]

default = ["db"]

db = ["rustorm"]

[dependencies]
subprocess = "0.2"
youtube_dl = "0.6"
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4"
confy = "0.4"
dotenv = "0.15"
rustorm = { version = "0.18", features = ["with-sqlite"],optional=true}
reqwest = { version = "0.10", features = ["blocking", "json"] }
regex = "1"
cached = "0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]


[target.'cfg(arm)'.dependencies]
openssl = { version = "0.10.30", features = ["vendored"] }

[[bin]]
name = "queue"
path = "src/queue/main.rs"

[[bin]]
name = "streamer"
path = "src/streamer/main.rs"

[[bin]]
name = "proxy"
path = "src/proxy/main.rs"

[[bin]]
name = "command"
path = "src/command/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"